# auto-research

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/skills/bump-prompt-version/: SKILL.md
.claude/skills/chestertons-fence/: SKILL.md
.claude/skills/citation-check/: SKILL.md
.claude/skills/pit-check/: SKILL.md
.claude/skills/worktree/: SKILL.md
.cursor/rules/: auto-research.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  issue.md
.github/workflows/: ci.yml  live-smoke.yml
config/transcripts/: sources.toml
config/universe/: universe_v1.json
data/universe/: universe_v1.json
docs/: AI_CODE_STYLE.md  AI_WORKFLOW.md  ARCHITECTURE.md  BACKTEST.md  CONTRACTS.md  DATA_MODEL.md  SESSION_HANDOFF.md
docs/decisions/: 2026-05-23-transcripts-source.md  2026-05-24-rag-enhancements.md  2026-05-25-foreign-filers-deferred.md
docs/learning/: observability-for-ai-engineering.md  testing-for-ai-engineering.md
docs/plans/: 2026-05-22-auto-research-implementation.md
docs/plans/per-issue/: 11-prompts-registry-s1s3.md  13-unstructured-chunking.md  14-contextual-chunking.md  17-qwen3-reranker.md  19-extraction-workers.md  20-gold-sets-deepeval.md  52-otel-ingest-spans.md  69-materialization-versioned-tables.md  78a-tool-use.md
docs/specs/: 2026-05-22-design.md  2026-05-28-xbrl-sql-layer-design.md
docs/superpowers/plans/: 2026-05-29-tenk-narrative-financial-disclosures.md
docs/superpowers/specs/: 2026-05-29-tenk-narrative-financial-disclosures-design.md
eval/baselines/: eight_k__v1__baseline.json  entity_resolution__gold.json  s_filings__v1__baseline.json  s_filings_dilution__gold.json  ten_k__v1__baseline.json  transcript__v1__baseline.json
eval/gold_sets/: eight_k.jsonl  s_filings.jsonl  ten_k.jsonl  transcript.jsonl
feast_repo/: .feastignore  _materialize.py  _pit.py  entities.py  feature_store.yaml  feature_views.py
learning/: 2026-05-25-chunking-walkthrough.md  2026-05-28-extraction-pipeline-cost-model.md  README.md
scripts/: build_chunking_fixture.py  build_universe_fixtures.py  create_all_issues.py  migrate_materialization_to_v0.py  promote_prompt.py  serve_local_llm.sh  setup_github.sh  survey_8k_exhibits.csv  survey_8k_exhibits.md  survey_8k_exhibits.py  survey_8k_transcripts.csv  survey_8k_transcripts.md  survey_8k_transcripts.py  validate_10k_items.py
scripts/gold_labeling/: ingest_worksheets.py  make_worksheets.py
src/auto_research/: _io.py  _models.py  _pricing.py  _transport.py  cli.py  cli_eval.py  experiment.py  telemetry.py
src/auto_research/agents/: __init__.py  reliability.py
src/auto_research/eval/: __init__.py  baseline.py  geval.py  gold.py  hallucination.py  metrics.py  registry.py
src/auto_research/extract/: __init__.py  _caching.py  _response.py  batch_client.py  cache.py  chunking.py  chunking_contextual.py  client.py  embeddings.py  entity_resolution.py  enums.py  guardrails.py  materialization.py  openai_compat_client.py  rag_retrieval.py  rerank.py  schemas.py
src/auto_research/ingest/: __init__.py  _http.py  edgar.py  manifest.py  rate_limit.py
src/auto_research/universe/: __init__.py
tests/: _otel_helpers.py  conftest.py  test_telemetry.py
tests/evals/: _eval_asserts.py  test_eight_k_extraction.py  test_entity_resolution_eval.py  test_s_filings_extraction.py  test_ten_k_extraction.py  test_transcript_extraction.py
tests/feast/: _pit_invariants.py  test_feast_apply.py  test_pit_properties.py
tests/fixtures/chunking/: edge_cases.htm  sample_10k.htm  sample_10k.meta.json  sample_10k_aaoi.htm  sample_10k_aaoi.meta.json  sample_10k_aapl.htm  sample_10k_aapl.meta.json  sample_10k_acmr.htm  sample_10k_acmr.meta.json  sample_10k_aehr.htm  sample_10k_aehr.meta.json  sample_10k_alab.htm  sample_10k_alab.meta.json  sample_10k_algm.htm  sample_10k_algm.meta.json  sample_10k_amat.htm  sample_10k_amat.meta.json  sample_10k_amba.htm  sample_10k_amba.meta.json  sample_10k_amd.htm  sample_10k_amd.meta.json  sample_10k_amzn.htm  sample_10k_amzn.meta.json  sample_10k_anet.htm  sample_10k_anet.meta.json  sample_10k_asts.htm  sample_10k_asts.meta.json  sample_10k_avgo.htm  sample_10k_avgo.meta.json  sample_10k_be.htm  sample_10k_be.meta.json  sample_10k_bksy.htm  sample_10k_bksy.meta.json  sample_10k_ceg.htm  sample_10k_ceg.meta.json  sample_10k_cien.htm  sample_10k_cien.meta.json  sample_10k_cohr.htm  sample_10k_cohr.meta.json  sample_10k_crdo.htm  (+111 more)
tests/fixtures/s_filings/: sample_s3_excerpt.txt
tests/integration/: conftest.py  test_batch_client_vcr.py  test_chunking_contextual_vcr.py  test_edgar_vcr.py  test_embeddings_vcr.py  test_extract_client_vcr.py  test_extract_worker_s_filings_vcr.py  test_reliability_vcr.py  test_telemetry_export.py
tests/live/: conftest.py  test_edgar_smoke.py  test_embeddings_qwen3_smoke.py  test_rerank_qwen3_smoke.py  test_ten_k_local_qwen_smoke.py  test_youtube_smoke.py
tests/unit/: _fixture_meta.py  conftest.py  test_batch_client.py  test_chunking.py  test_chunking_contextual.py  test_cli.py  test_cli_eval.py  test_edgar.py  test_embeddings.py  test_entity_resolution.py  test_eval_baseline.py  test_eval_geval.py  test_eval_gold.py  test_eval_hallucination.py  test_eval_metrics.py  test_eval_registry.py  test_experiment.py  test_extract_cache.py  test_extract_client.py  test_extract_guardrails.py  test_extract_local_dispatch.py  test_extract_openai_compat_client.py  test_extract_prompts.py  test_extract_prompts_registry.py  test_extract_schemas.py  test_extract_worker_common.py  test_extract_worker_eight_k.py  test_extract_worker_s_filings.py  test_extract_worker_ten_k.py  test_extract_worker_transcript.py  test_http.py  test_live_conftest_optin.py  test_manifest.py  test_materialization.py  test_migrate_materialization_to_v0.py  test_models.py  test_promote_prompt.py  test_rag_retrieval.py  test_rate_limit.py  test_reliability.py  (+4 more)
tests/unit/transcripts/: test_base.py  test_config.py  test_direct_mp3.py  test_registry.py  (+3 more)
(+79 files in other folders)
