[project]
name = "auto-research"
version = "0.1.0"
description = "Two-plane multi-agent research platform for cross-asset language-driven alpha"
authors = [{ name = "Sam Xu", email = "samxu0825@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
# Runtime dependencies are added per-issue as features land. See the
# implementation plan; subsequent issues will `uv add` the packages
# they introduce (anthropic, feast, langgraph, pydantic-ai, ...).
dependencies = [
    "anthropic>=0.104.0",
    "click>=8.1,<9",
    "exchange-calendars>=4.5",
    "feast>=0.50,<1",
    "httpx>=0.28.1",
    "langfuse>=2,<3",
    "mlflow-skinny>=3.0",
    "numpy>=2.0",
    "openai>=2.38.0",
    "pandas>=2.2",
    "pyarrow>=23.0.1",
    "pydantic>=2.13.4",
    "tenacity>=8.5,<9",
    "tiktoken==0.13.0",
    "traceloop-sdk>=0.30",
    "unstructured[html]==0.21.5",
    "yt-dlp>=2026.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
    "vcrpy>=8.1.1",
]

[project.scripts]
auto-research = "auto_research.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
# feast_repo/ is a Feast feature repository at the project root (not under
# src/auto_research). Add the project root so `from feast_repo...` resolves
# in tests.
pythonpath = ["."]
# Markers used to scope which tests run in CI vs locally. See Makefile
# and .github/workflows/ci.yml. Tests under tests/integration/ are
# auto-marked via tests/integration/conftest.py.
markers = [
    "eval: tests that hit external LLM/eval APIs (excluded from CI by default)",
    "integration: tests that hit external services (excluded from CI by default)",
    "live: tests that hit real external services over real network (excluded from CI by default; run via `make live-smoke` with credentials)",
    "broad_fixture: parameterized variant against a broad-tier chunking fixture (excluded from default `make test`; run via `make test-broad`)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "feast_repo"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["auto_research", "feast_repo", "tests"]
# `feast` (the third-party package) is otherwise misclassified as first-party
# because ruff's auto-detection sees `feast_repo` in src and treats the prefix
# as a package root.
known-third-party = ["feast"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["src/auto_research", "feast_repo", "tests"]
mypy_path = "."
# tests/feast/_pit_invariants.py is a shared test helper that mypy sees
# under two module names (with and without the tests.feast prefix) because
# tests/feast/ has no __init__.py — adding one shadows the feast package
# at pytest import time. Skip strict typecheck on the helper file
# (it's six lines of asserts; the runtime tests cover its behavior).
#
# tests/conftest.py + tests/unit/conftest.py + tests/integration/
# conftest.py all collide at the top-level `conftest` module name to
# mypy because no `__init__.py` exists in the corresponding dirs.
# pytest discovers conftest.py specially regardless of packaging, so
# the simplest fix is to exclude them all from strict mypy — they hold
# only session-fixture setup, not contract code. `_otel_helpers.py`
# is a shared test helper that has the same dual-name issue.
exclude = [
    "tests/feast/_pit_invariants\\.py$",
    "tests/conftest\\.py$",
    "tests/_otel_helpers\\.py$",
    "tests/unit/conftest\\.py$",
    "tests/integration/conftest\\.py$",
]

# Third-party libs without type stubs. Keep this list short; each entry
# means we're trusting an untyped surface.
[[tool.mypy.overrides]]
module = "langfuse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mlflow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vcr.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "feast.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "exchange_calendars.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "hypothesis>=6.152.9",
    "mlflow>=3.0",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.6.0",
    "pytest-randomly>=4.1.0",
]
